// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.service;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/ambiance.proto";
import "io/harness/pms/contracts/plan/plan_node_proto.proto";

service EngineExpressionProtoService {
  rpc renderExpression(ExpressionRenderBlobRequest) returns (ExpressionRenderBlobResponse);
  rpc evaluateExpression(ExpressionEvaluateBlobRequest) returns (ExpressionEvaluateBlobResponse);
}

message ExpressionRenderBlobRequest {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  string expression = 2;
  bool skipUnresolvedExpressionsCheck = 3;
  io.harness.pms.contracts.plan.ExpressionMode expressionMode = 4;
}

message ExpressionRenderBlobResponse {
  string value = 1;
}

message ExpressionEvaluateBlobRequest {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  string expression = 2;
  io.harness.pms.contracts.plan.ExpressionMode expressionMode = 3;
  // Added boolean to see if new recast flow for primitives needs to be handled or not
  bool newRecastFlow = 4;
}

message ExpressionEvaluateBlobResponse {
  string value = 1;
}
